--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -5,7 +5,7 @@
 }
 
 .gallery {
-    width: 100%;
+    width: 100vw;
     min-height: 600vh;
     display: flex;
     flex-direction: column;
